<resources>
    <string name="app_name">Shield</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>




    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="apartment">Complex/Apartment</string>
    <string name="flat_no">Flat No</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="purpose">Purpose</string>
    <string name="date_time">Date and Time</string>
    <string name="person_to_meet">Person To Meet</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_for_otp">Please enter your email for OTP</string>
    <string name="submit">Submit</string>
    <string name="relation">Relation</string>
    <string name="car_name">Brand &amp; Model name</string>
    <string name="car_color">Colour</string>
    <string name="car_registration_no">Registration/Number plate no.</string>



    <string-array name="drawer_items">
        <item>Home</item>
        <item>Visitor</item>
        <item>Vendor</item>
        <item>Staff</item>
        <item>My Family</item>
        <item>Cars</item>
        <item>Profile</item>
        <item>Neighbours</item>
        <item>Committee</item>
        <item>Notify Gate</item>
        <item>Help Desk</item>
        <item>Security</item>
        <item>Settings</item>
        <item>Logout</item>

    </string-array>


</resources>
