<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="@mipmap/bg"
    >

    <RelativeLayout
        android:id="@+id/rel_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/half_left_corner"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingEnd="20dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/register"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_middle"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerVertical="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_right_white"
            android:layout_marginEnd="50dp"
            android:paddingTop="30dp"
            android:paddingBottom="60dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:hint="@string/phone_number"
                />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_phone"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_login"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/blue_round"
            android:padding="10dp"
            android:elevation="4dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="80dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/right_arrow_white"
                />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/half_right_corner"
        android:layout_below="@+id/rel_middle"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingEnd="30dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password"
            />

    </RelativeLayout>



</RelativeLayout>