<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RenewPassword"
    android:background="@mipmap/bg"
    >

    <RelativeLayout
        android:id="@+id/rel_middle"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_centerVertical="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/half_right_white"
            android:layout_marginEnd="50dp"
            android:paddingTop="30dp"
            android:paddingBottom="60dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

            <EditText
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:hint="@string/otp"
                />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_otp"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                />

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_password"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="15dp"
                android:hint="@string/confirm_password"
                />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_save"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/blue_round"
            android:padding="10dp"
            android:elevation="4dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="80dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/right_arrow_white"
                />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>