<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:id="@+id/rel_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/deep_blue_round"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/backarrow_white"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:text="Add Car/Bike"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/car_white"
                android:background="@drawable/blue_round"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/edt_car_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:hint="@string/car_name"
                android:layout_marginTop="30dp"
                android:autofillHints="@string/car_name"
                android:inputType="text"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/edt_car_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="10dp"
                android:hint="@string/car_color"
                android:autofillHints="@string/car_color"
                android:inputType="text"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/edt_car_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="10dp"
                android:hint="@string/car_registration_no"
                android:autofillHints="@string/car_registration_no"
                android:inputType="text"
                android:singleLine="true"
                />



            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/all_corner"
                android:textColor="@color/white"
                android:text="@string/submit"
                />


        </LinearLayout>


    </ScrollView>



</LinearLayout>